--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>King Kong Retro</title>
+    <title>Donkey Kong Game</title>
     <style>
         body {
             margin: 0;
@@ -12,11 +11,10 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #000;
+            background-color: black;
         }
-        canvas {
-            border: 1px solid #fff;
-            background-color: #222;
+        #gameCanvas {
+            border: 1px solid white;
         }
     </style>
 </head>
